# copperhead-rust-puthon

./: .gitignore  INDEX.md  LICENSE  MANIFEST.in  PRACTICAL_EXAMPLE.md  README.md  ROADMAP.md  WHITEPAPER.md  comprehensive_test.py  paper.md  populate_registry.py  pyproject.toml
copperhead/: __init__.py  cli.py  compiler.py  debugger.py  interpreter.py  llm.py  parser.py  registry.py  transpiler.py
copperhead/examples/: abstract_examples.py  basic_math.py  data_processing.py  ownership.py  performance.py
copperhead/tests/: __init__.py  test_cli.py  test_compiler.py  test_debugger.py  test_llm.py  test_parser.py  test_registry.py  test_transpiler.py  test_types.py
demo/: populate_registry.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  TUTORIAL.md  index.md
examples/speed_comparison/: compare.py  copperhead_version.py  standard_python.py  test_ai_generation.py
