[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copperhead"
version = "0.1.0"
description = "Write Python. Run Rust. A Granular Transpilation Framework for Seamless Rust-Python Interoperability."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Unaveraged Tech", email = "hello@unaveragetech.com"}
]
keywords = ["python", "rust", "transpilation", "ffi", "performance", "ai", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/unaveragetech/copperhead-rust-puthon"
Documentation = "https://copperhead-ad8qypth.manus.space"
Repository = "https://github.com/unaveragetech/copperhead-rust-puthon"
Issues = "https://github.com/unaveragetech/copperhead-rust-puthon/issues"
Roadmap = "https://github.com/unaveragetech/copperhead-rust-puthon/blob/main/ROADMAP.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
copperhead = "copperhead.cli:main"

[tool.setuptools.packages.find]
include = ["copperhead*"]

[tool.setuptools.package-data]
copperhead = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["copperhead/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
